--- a/staticfiles/css/customers.css
+++ b/staticfiles/css/customers.css
@@ -4,8 +4,10 @@
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  max-width: 1200px;
   margin: 2rem auto;
+  max-width: 100%;
+  width: 100%;
+  margin-top: 4rem;
 }
 
 .page-container h2 {
