--- a/staticfiles/css/files_navbar.css
+++ b/staticfiles/css/files_navbar.css
@@ -17,7 +17,7 @@ body {
   justify-content: space-between;
   background-color: #fff;
   padding: 0 20px;
-  color: #007bff;
+  color: #073692;
   z-index: 1000;
 }
 
@@ -31,13 +31,10 @@ body {
 /* ===============================
    Search Bar
    =============================== */
-/* ===============================
-   Fancy Search Bar
-   =============================== */
 .search-bar {
   display: flex;
   align-items: center;
-  background: linear-gradient(90deg, #e3f2fd, #bbdefb);
+  background: #f4f6f9;
   padding: 8px 12px;
   border-radius: 50px;
   margin: 0 20px;
@@ -53,14 +50,14 @@ body {
 }
 
 .search-bar i {
-  color: #123692;
+  color: #073692;
   margin-right: 12px;
   font-size: 1.2rem;
   transition: transform 0.3s ease, color 0.3s ease;
 }
 
 .search-bar:hover i {
-  color: #0d6efd;
+  color: #073692;
   transform: scale(1.1);
 }
 
@@ -76,7 +73,7 @@ body {
 }
 
 .search-bar input::placeholder {
-  color: #0d6efd;
+  color: #073692;
   opacity: 0.7;
   font-weight: 400;
   transition: opacity 0.3s ease;
@@ -193,7 +190,7 @@ body {
 }
 
 .hamburger i:hover {
-  color: #007bff;         
+  color: #073692;         
 }
 
 /* ===============================
