--- a/staticfiles/css/problem_category.css
+++ b/staticfiles/css/problem_category.css
@@ -14,7 +14,8 @@
   padding: 30px;
   border-radius: 10px;
   margin: 20px auto;
-  max-width: 1000px;
+  max-width: 100%;
+  width: 100%;
 }
 
 /* Header */
