--- a/staticfiles/css/ticket_list.css
+++ b/staticfiles/css/ticket_list.css
@@ -20,10 +20,10 @@ h1 {
 
 /* Container */
 .ticket-list-container {
-    width: 90%;
-    max-width: 1200px;
-    margin: 0 auto;
-    margin-top: 50px;
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
+    margin-top: 4rem;
     padding: 20px 25px;
     background: #ffffff;
     border-radius: 12px;
