--- a/staticfiles/css/users.css
+++ b/staticfiles/css/users.css
@@ -4,8 +4,9 @@
   padding: 2rem;
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-  margin: 2rem auto;
-  max-width: 1000px;
+  margin: 4rem auto;
+  max-width: 100%;
+  width: 100%;
 }
 
 h2 {
@@ -48,10 +49,6 @@ h2 {
 .user-table thead {
   background-color: #123692;
   color: white;
-}
-
-.user-table tr:hover {
-  background-color: #f1f1f1;
 }
 
 /* Badge Styling */
