--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -49,7 +49,7 @@
       </div>
       <div class="dropdown-menu">
         <a href="{% url 'profile_view' %}"><i class="fa-solid fa-user"></i>  Profile</a>
-        <a href="{% url 'settings' %}"><i class="fa-solid fa-gear"></i>  Settings</a>
+        <a href="{% url 'pre_dashboards' %}"><i class="fa-solid fa-grip"></i>  Pre Dashboards</a>
         <form id="logout-form" method="post" action="{% url 'logout' %}" style="margin: 0;">
           {% csrf_token %}
           <button type="submit" class="dropdown-link logout-btn"><i class="fa-solid fa-right-from-bracket"></i> Logout</button>
