--- a/core/templates/accounts/settings.html
+++ b/core/templates/accounts/settings.html
@@ -30,7 +30,7 @@
       <nav class="sidebar-nav">
             <a href="#" {% if request.path == '/settings/' %}class="active"{% endif %}><i class="fas fa-cog"></i> Settings</a>
             <a href="{% url 'profile_view' %}" {% if request.path == '/profile/' %}class="active"{% endif %}><i class="fas fa-user"></i> Profile</a>
-            <a href="{% url 'password_reset' %}" {% if request.path == '/password_reset/' %}class="active"{% endif %}><i class="fas fa-lock"></i> Change Password</a>
+            <!--<a href="{% url 'password_reset' %}" {% if request.path == '/password_reset/' %}class="active"{% endif %}><i class="fas fa-lock"></i> Change Password</a>-->
         </nav>
     </aside>
 
